--- a/bower.json
+++ b/bower.json
@@ -14,7 +14,9 @@
     "angular-toastr": "~1.5.0",
     "moment": "~2.10.6",
     "animate.css": "~3.4.0",
-    "angular": "~1.5.3"
+    "angular": "~1.5.3",
+    "firebase": "^2.4.2",
+    "angularfire": "^1.2.0"
   },
   "devDependencies": {
     "angular-mocks": "~1.5.3"
