--- a/bower.json
+++ b/bower.json
@@ -16,7 +16,8 @@
     "animate.css": "~3.4.0",
     "angular": "~1.5.3",
     "firebase": "^2.4.2",
-    "angularfire": "^1.2.0"
+    "angularfire": "^1.2.0",
+    "angular-moment": "^0.10.3"
   },
   "devDependencies": {
     "angular-mocks": "~1.5.3"
